  unreadable files and -w option to treat temporary errors as warning
o openrc script for starting svscan
o alpine linux ready
o supervise: add feature to run ./init once before ./run
o svscan: set SERVICEDIR, PWD environment variable
o svscan: ability to run as PID 1 and reap dead children
o setuidgid: Feature to set additional groups using -g option
===========================================================================
- 27/02/2021
01. minisvc: added options to set, unset, remove env variables for supervised
    services
02. minisvc: added --dumpconfig option
03. updated minisvc man page
- 28/02/2021
04. minisvc: use common functions dump_run_header, dump_log_header for
    generating run, log/run
05. post install: save variables to .variables
- 07/04/2021
06. svscan: run log supervise process with parent directory as argv2
07. supervise: allow supervise for log process to run with three arguments
- 15/04/2021
08. minisvc: take into account /run filesystem when enabling, disabling service
- 16/04/2021
09. svscan: disable service in /run filesystem when service is disabled in
    /service
10. minisvc: added checks when enabling, disabling service
11. updated svscan man page
- 20/04/2021
12. minisvc - make output less verbose with --silent parameter
13. minisvc - honour --silent in export variables
- 27/04/2021
14. supervise: do not treat error_exist as error for mkdir
- 28/04/2021
15. systemd.override.conf: added systemd override unit file for systems
    without battery backed RTC
16. minisvc - allow --force to override norefreshsvc flag for a service
- 30/04/2021
17. remove zero bytes package_name-stat.override file
- 03/05/2021
18. do systemctl daemon-reload after installing/removing svscan service
19. timestamp.h: fix function prototype for timestamp()
- 06/05/2021
20. minisvc: removed mixed use of space and tab
- 12/05/2021
21. moved pathexec_run, pathexec_env to libqmail
- 16/05/2021
22. minisvc: fixed TMPDIR creation
- 17/05/2021