@@ -34,31 +34,47 @@ is at most 255 bytes long and
 exists.
 .B svscan
 needs two free descriptors for each pipe. The \fIlog\fR supervise process
-additionally sets argv2 as \fIs\fR to easily locate the process in ps
-output.
+additionally sets argv2 as \fIs\fR to easily locate the process in
+\fBps\fR(1) output. e.g.
 
-Every 60 seconds, \fBsvscan\fR checks for subdirectories again. If it
-sees a new subdirectory, it starts a new \fBsupervise\fR(8) process. If it
-sees an old subdirectory where a \fBsupervise\fR(8) process has exited, it
-restarts the \fBsupervise\fR(8) process. In the \fBlog\fR case it reuses
-the same pipe so that no data is lost.
-
-The default scan interval of 60 secs can be changed by setting
-\fBSCANINTERVAL\fR environment variable. Set \fBSCANINTERVAL\fR to 0 to
-disable the automatic scanning of the service directory completely. You
-can also send a HUP signal to svscan to force a directory scan.
+.EX
+root    1588    1528  0 May05 ?      00:00:00 supervise qmail-smtpd.25
+root    1589    1528  0 May05 ?      00:00:00 supervise log qmail-smtpd.25
+.EE
 
 \fBsvscan\fR is designed to run forever. If it has trouble creating a pipe
 or running \fBsupervise\fR(8), it prints a message to stderr; it will try
 again five seconds (or SCANINTERVAL) later.
 
-If \fBsvscan|fR is given a command-line argument \fIdirectory\fR, it
+If the environment variable \fBAUTOSCAN\fR is set, every 60 seconds,
+\fBsvscan\fR checks for subdirectories again. If it sees a new
+subdirectory, it starts a new \fBsupervise\fR(8) process. If it sees an old
+subdirectory where a \fBsupervise\fR(8) process has exited, it restarts the
+\fBsupervise\fR(8) process. In the \fBlog\fR case it reuses the same pipe
+so that no data is lost. The default scan interval of 60 secs can be
+changed by setting \fBSCANINTERVAL\fR environment variable. Set
+\fBSCANINTERVAL\fR to 0 to disable the automatic scanning of the service
+directory completely. You can also send a HUP signal to svscan to force a
+directory scan. If running as PID 1, \fBsvscan\fR will automatically scan
+for new subdirectories when any of it's children or any orphaned process
+die.
+
+\fBsvscan\fR can be run with a PID of 1 (init replacement) and reap child
+processes. This feature exploited in docker/podman/kubernates environment.
+The \fBINITCMD\fR environment variable can be used to do service
+management. The biggest advantage of \fBsvscan\fR is its simplicity.
+Unlike systemd(1), it is not complex and tied with multiple pieces of
+software to make it work. You can also use openrc from Gentoo to create a
+decent, simple service manager to start only the processes that you
+require.
+
+If \fBsvscan\fR is given a command-line argument \fIdirectory\fR, it
 switches to that \fIdirectory\fR when it starts.
 
 \fBsvscan\fR writes its pid to the file \fB.svscan.pid\fR in /run/svscan,
 /var/run/svscan or the directory where it starts (which ever is found
 first). It uses this file to prevent multiple copies of \fBsvscan\fR to run
-on the same directory. It also uses the /proc filesystem to verify if the
+for the same directory. It also uses the /proc filesystem to verify if the
 pid belongs to a process named \fBsvscan\fR, by opening the file
 \fB/proc/pid/comm\fR. \fBsvscan\fR will start if the file does not exist,
 or if pid does not exist, or if the pid belongs to a non-svscan process.
@@ -81,14 +97,6 @@ the value of \fBSERVICEDIR\fR. For every \fBsupervise\fR log process it
 runs, \fBsvscan\fR also sets \fBSV_PWD\fR=\fBs\fR environment variable.
 \fBsvscan\fR also sets PPID for supervise proceses and any initialization
 command it runs.
-
-\fBsvscan\fR is designed to run even with a PID of 1 and reap child
-processes. This is exploited in docker/podman/kubernates environment. The
-\fBINITCMD\fR environment variable can be used to do service management.
-The biggest advantage of \fBsvscan\fR is its simplicity. Unlike
-systemd(1), it is not complex and tied with multiple pieces of software to
-make it work. You can also use openrc from Gentoo to create a decent,
-simple service manager to start only the processes that you require.
 
 If \fBINITCMD\fR environment variable is defined and set to an empty string
 and if \fI@servicedir@\fR/.svscan/\fIrun\fR exists and has the executable
